5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1798_2564.log
== TEST (2019-06-05 15:23:42) 
-- CODE:
vet1 = array(eval(input("Gols do time: ")))
vet2 = array(eval(input("Gols do adversario:")))
vcont = zeros(3, dtype=int)
for i in range (0, size(vet1)):
	if (vet1[i] > vet2[i]):
		vcont[0] = vcont[0] + 1
	elif (vet1[i] == vet1[i]):
		vcont[1] = vcont[1] + 1
	else:
		vcont[2] = vcont[2] + 1
print("vcont")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vet1 = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:24:14) 
-- CODE:
vet1 = array(eval(input("Gols do time: ")))
vet2 = array(eval(input("Gols do adversario:")))
vcont = zeros(3, dtype=int)
for i in range (0, size(vet1)):
	if (vet1[i] > vet2[i]):
		vcont[0] = vcont[0] + 1
	elif (vet1[i] == vet1[i]):
		vcont[1] = vcont[1] + 1
	else:
		vcont[2] = vcont[2] + 1
print("vcont")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vet1 = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:24:18) 
-- CODE:
vet1 = array(eval(input("Gols do time: ")))
vet2 = array(eval(input("Gols do adversario:")))
vcont = zeros(3, dtype=int)
for i in range (0, size(vet1)):
	if (vet1[i] > vet2[i]):
		vcont[0] = vcont[0] + 1
	elif (vet1[i] == vet1[i]):
		vcont[1] = vcont[1] + 1
	else:
		vcont[2] = vcont[2] + 1
print("vcont")


-- EXECUTION TIME:
0.688014
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 1, in <module>
    vet1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:25:00) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Gols do time: ")))
vet2 = array(eval(input("Gols do adversario:")))
vcont = zeros(3, dtype=int)
for i in range (0, size(vet1)):
	if (vet1[i] > vet2[i]):
		vcont[0] = vcont[0] + 1
	elif (vet1[i] == vet1[i]):
		vcont[1] = vcont[1] + 1
	else:
		vcont[2] = vcont[2] + 1
print("vcont")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:25:46) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Gols do time: ")))
vet2 = array(eval(input("Gols do adversario:")))
vcont = zeros(3, dtype=int)
for i in range (0, size(vet1)):
	if (vet1[i] > vet2[i]):
		vcont[0] = vcont[0] + 1
	elif (vet1[i] == vet1[i]):
		vcont[1] = vcont[1] + 1
	else:
		vcont[2] = vcont[2] + 1
print("vcont")


-- EXECUTION TIME:
1.02971
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
vcont
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
vcont
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
vcont
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:26:11) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Gols do time: ")))
vet2 = array(eval(input("Gols do adversario:")))
vcont = zeros(3, dtype=int)
for i in range (0, size(vet1)):
	if (vet1[i] > vet2[i]):
		vcont[0] = vcont[0] + 1
	elif (vet1[i] == vet1[i]):
		vcont[1] = vcont[1] + 1
	else:
		vcont[2] = vcont[2] + 1
print("vcont")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:28:24) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Gols do time: ")))
vet2 = array(eval(input("Gols do adversario:")))
vcont = zeros(3, dtype=int)
for i in range (0, size(vet1)):
	if (vet1[i] > vet2[i]):
		vcont[0] = vcont[0] + 1
	elif (vet1[i] == vet1[i]):
		vcont[1] = vcont[1] + 1
	else:
		vcont[2] = vcont[2] + 1
print(vcont)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:35:06) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Gols do time: ")))
vet2 = array(eval(input("Gols do adversario:")))
vcont = zeros(3, dtype=int)
for i in range (0, size(vet1)):
	if (vet1[i] > vet2[i]):
		vcont[0] = vcont[0] + 1
	elif (vet1[i] == vet1[i]):
		vcont[1] = vcont[1] + 1
	else:
		vcont[2] = vcont[2] + 1
print(vcont)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:35:24) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Gols do time: ")))
vet2 = array(eval(input("Gols do adversario:")))
vcont = zeros(3, dtype=int)
for i in range (0, size(vet1)):
	if (vet1[i] > vet2[i]):
		vcont[0] = vcont[0] + 1
	elif (vet1[i] == vet1[i]):
		vcont[1] = vcont[1] + 1
	else:
		vcont[1] = vcont[1] + 1
print(vcont)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:36:18) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Gols do time: ")))
vet2 = array(eval(input("Gols do adversario:")))
vcont = zeros(3, dtype=int)
for i in range (0, size(vet1)):
	if (vet1[i] > vet2[i]):
		vcont[0] = vcont[0] + 1
	elif (vet1[i] == vet1[i]):
		vcont[1] = vcont[1] + 1
	else:
		vcont[0] = vcont[0] + 1
print(vcont)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:37:36) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Gols do time: ")))
vet2 = array(eval(input("Gols do adversario:")))
vcont = zeros(3, dtype=int)
for i in range (0, size(vet1)):
	if (vet1[i] > vet2[i]):
		vcont[0] = vcont[0] + 1
	elif (vet1[i] == vet1[i]):
		vcont[0] = vcont[0] + 1
	else:
		vcont[0] = vcont[0] + 1
print(vcont)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:38:34) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Gols do time: ")))
vet2 = array(eval(input("Gols do adversario:")))
vcont = zeros(3, dtype=int)
for i in range (0, size(vet1)):
	if (vet1[i] > vet2[i]):
		vcont[0] = vcont[0] + 1
	elif (vet1[i] == vet1[i]):
		vcont[1] = vcont[1] + 1
	else:
		vcont[2] = vcont[2] + 1
print(vcont)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:39:32) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Gols do time: ")))
vet2 = array(eval(input("Gols do adversario:")))
vcont = zeros(3, dtype=int)
for i in range (0, size(vet1)):
	if (vet1[i] > vet2[i]):
		vcont[0] = vcont[0] + 1
	elif (vet1[i] == vet1[i]):
		vcont[1] = vcont[1] + 1
	else:
		vcont[2] = vcont[2] + 1
print(vcont)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:40:04) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Gols do time: ")))
vet2 = array(eval(input("Gols do adversario:")))
vcont = zeros(3, dtype=int)
for i in range (0, size(vet1)):
	if (vet1[i] > vet2[i]):
		vcont[0] = vcont[0] + 1
	elif (vet1[i] == vet1[i]):
		vcont[1] = vcont[1] + 1
	else:
		vcont[2] = vcont[2] + 1
print(vcont)


-- EXECUTION TIME:
1.09452
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 5 0]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 9 0]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:40:22) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Gols do time: ")))
vet2 = array(eval(input("Gols do adversario:")))
vcont = zeros(3, dtype=int)
for i in range (0, size(vet1)):
	if (vet1[i] > vet2[i]):
		vcont[0] = vcont[0] + 1
	elif (vet1[i] == vet2[i]):
		vcont[1] = vcont[1] + 1
	else:
		vcont[2] = vcont[2] + 1
print(vcont)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:40:43) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Gols do time: ")))
vet2 = array(eval(input("Gols do adversario:")))
vcont = zeros(3, dtype=int)
for i in range (0, size(vet1)):
	if (vet1[i] > vet2[i]):
		vcont[0] = vcont[0] + 1
	elif (vet1[i] == vet2[i]):
		vcont[1] = vcont[1] + 1
	else:
		vcont[2] = vcont[2] + 1
print(vcont)


-- EXECUTION TIME:
1.24678
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
